syntax = "proto3";

package api.proto.message.v1;

option go_package = "microGo/gen/go/message/v1;messagev1";

service MessageService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
  rpc GetChatHistory(GetChatHistoryRequest) returns (GetChatHistoryResponse);
}

message GetMessagesRequest {
  string chat_id = 1;
}

message GetChatHistoryRequest {
  string chat_id = 1;
  int32 limit = 2;
  string before_message_id = 3;
}

message GetChatHistoryResponse {
  repeated Message messages = 1;
  bool has_more = 2;
}

message SendMessageRequest {
  string to_used_id = 1;
  string content = 2;
  MessageType type = 3;
}

enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE_TYPE_TEXT = 1;
  MESSAGE_TYPE_IMAGE = 2;
  MESSAGE_TYPE_FILE = 3;
}

message Message {
  string id = 1;
  string from_user_id = 2;
  string to_user_id = 3;
  string content = 4;
  MessageType type = 5;
  string created_at = 6;
}

message SendMessageResponse {
  Message message = 1;
}

message GetMessagesResponse {
  repeated Message messages = 1;  // изменено с message на messages, так как это стрим сообщений
}
